<resources>
    <string name="app_name">iNews</string>
    <string name="home">Home</string>
    <string name="sports">Sports</string>
    <string name="buzz">Buzz</string>
    <string name="business">Business</string>
    <string name="tech">Tech</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>